--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/ioredis": "4.27.6",
+    "@types/jest": "^28.1.3",
     "@types/node": "^17.0.23",
     "@types/typescript": "^2.0.0",
+    "jest": "^28.1.1",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   },
@@ -25,6 +29,11 @@
     "build": "tsc",
     "start": "node ./dist/server",
     "migration:run": "ts-node-dev --transpile-only ./node_modules/typeorm/cli.js migration:run",
-    "migration:revert": "ts-node-dev --transpile-only ./node_modules/typeorm/cli.js migration:revert"
+    "migration:revert": "ts-node-dev --transpile-only ./node_modules/typeorm/cli.js migration:revert",
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test:verbose": "jset --passWithNoTests --runInBand --detectOpenHandles",
+    "test:coverage": "test --coverage",
+    "test:unit": "tests --watchAll -c ./jest-unit.config.ts",
+    "test:integration": "tests -watchAll -c ./jest-integration.config.ts"
   }
 }
