add config tests

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/jest": "^28.1.3",
     "@types/node": "^17.0.23",
     "@types/typescript": "^2.0.0",
+    "cross-env": "^7.0.3",
     "jest": "^28.1.1",
+    "sqlite3": "^5.0.8",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
     "ts-node-dev": "^1.1.8",
@@ -30,8 +32,10 @@
     "start": "node ./dist/server",
     "migration:run": "ts-node-dev --transpile-only ./node_modules/typeorm/cli.js migration:run",
     "migration:revert": "ts-node-dev --transpile-only ./node_modules/typeorm/cli.js migration:revert",
-    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
-    "test:verbose": "jset --passWithNoTests --runInBand --detectOpenHandles",
+    "migration:test": "cross-env NODE_ENV=test && migration:run",
+    "test:setup": "rimraf db-test.sql && migration:test",
+    "test": "cross-env NODE_ENV=test && test:setup && jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test:verbose": "cross-env NODE_ENV=test && test:setup && jest --passWithNoTests --runInBand --detectOpenHandles",
     "test:coverage": "test --coverage",
     "test:unit": "tests --watchAll -c ./jest-unit.config.ts",
     "test:integration": "tests -watchAll -c ./jest-integration.config.ts"
