--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/ioredis": "4.27.6",
     "@types/jest": "^28.1.3",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
     "@types/typescript": "^2.0.0",
     "cross-env": "^7.0.3",
@@ -19,10 +21,12 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "ioredis": "4.27.6",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "typeorm": "0.2.34"
   },
